GitVersion1/objects/Override_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for Overriding Standard pages</description>
    <fields>
        <fullName>Account_Active_Field_ID__c</fullName>
        <label>Account Active Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Auto_Validate_Field_Id__c</fullName>
        <label>Account Auto Validate Field Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Business_Unit_Field_ID__c</fullName>
        <description>Business Unit Picklist field ID on Account</description>
        <label>Account Business Unit Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_CAN_Business_Field_ID__c</fullName>
        <label>Account CAN Business Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Correspondence_Country_Field_ID__c</fullName>
        <label>Account Correspondence Country Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_Field_ID__c</fullName>
        <label>Account ID Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Mobile_First_Field_Id__c</fullName>
        <description>To hold the Account&apos;s mobile first field Id</description>
        <label>Account Mobile First Field Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Field_ID__c</fullName>
        <label>Account Name Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Physical_Country_Field_ID__c</fullName>
        <label>Account Physical Country Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Delete_RecordTypeID__c</fullName>
        <label>Account Team Delete RecordTypeID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Mobile_First_Field_Id__c</fullName>
        <label>Activity Mobile First Field Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Customer_Record_Type__c</fullName>
        <label>Commercial Customer Record Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Customer_Update_Record_TypeID__c</fullName>
        <label>Commercial Customer Update Record TypeID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Customer_Update_Record_Type__c</fullName>
        <label>Commercial Customer Update Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Record_Type__c</fullName>
        <label>Competitor Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Update_Record_Type__c</fullName>
        <label>Competitor Update Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Validation_RecordTypeId__c</fullName>
        <label>Competitor Validation RecordTypeId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Validation_Record_Type__c</fullName>
        <label>Competitor Validation Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Record_Type__c</fullName>
        <label>Consumer Record Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Update_Request_RecordType_Id__c</fullName>
        <label>Consumer Update Request RecordType Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Update_Request_Type__c</fullName>
        <label>Consumer Update Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Validation_RecordType_ID__c</fullName>
        <label>Consumer Validation RecordType ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Validation_Record_Type__c</fullName>
        <label>Consumer Validation Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Validation_Request_RecordTypeID__c</fullName>
        <label>Consumer Validation Request RecordTypeID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Business_Unit_Field_ID__c</fullName>
        <description>Business Unit picklist Field ID on Contact</description>
        <label>Contact Business Unit Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mailing_Country_Field_ID__c</fullName>
        <label>Contact Mailing Country Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_First_Field_Id__c</fullName>
        <description>To hold the Contact&apos;s Mobile First field Id</description>
        <label>Contact Mobile First Field Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Other_Country_Field_ID__c</fullName>
        <label>Contact Other Country Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Primary_Language_Field_ID__c</fullName>
        <label>Contact Primary Language Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Account_Field_ID__c</fullName>
        <label>Contact Role Account Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Product_Line_Field_ID__c</fullName>
        <label>Contact Role Product Line Field ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Segment_Field_ID__c</fullName>
        <label>Contact Role Segment Field ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Business_Unit_Field_ID__c</fullName>
        <description>Business Unit picklist Field ID on Event</description>
        <label>Event Business Unit Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Business_Unit_Field_ID__c</fullName>
        <description>Business Unit picklist Field ID on Opportunity</description>
        <label>Opportunity Business Unit Field ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Currency_Field_Id__c</fullName>
        <label>Opportunity Currency Field Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Mobile_First_Field_Id__c</fullName>
        <description>To hold Opportunity Mobile first Field Id value</description>
        <label>Opportunity Mobile First Field Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Item_Field_ID__c</fullName>
        <label>Product Line Item Field ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Lookup_Field_ID__c</fullName>
        <description>Segmentation/Product Line Lookup on Opportunity

- User Browser&apos;s Inspect Element feature to specify any lookup field ID on a page
- Add &apos;_lkid&apos; when populating the lookup)</description>
        <label>Product Line Lookup Field ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Conversion_RecordTypeID__c</fullName>
        <label>Prospect Conversion RecordTypeID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Conversion_Record_Type__c</fullName>
        <label>Prospect Conversion Record Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Validation_Record_Type__c</fullName>
        <label>Prospect Validation Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Validation_Request_RecordTypeID__c</fullName>
        <label>Prospect Validation Request RecordTypeID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Accounts_Canada_Report_Id__c</fullName>
        <description>Store 18 digit Related Accounts Canada Report Id</description>
        <label>Related Accounts Canada Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Accounts_Poland_Report_Id__c</fullName>
        <label>Related Accounts Poland Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Accounts_Report_Id__c</fullName>
        <label>Related Accounts Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_LineItem_ReportID__c</fullName>
        <description>This field stores the Report ID for the Requests with Line items report which is referenced in a custom link in Customer Account Page layouts</description>
        <label>Request LineItem ReportID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Record_Type__c</fullName>
        <label>Standard Record Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Record_Type_CPN_INDIA__c</fullName>
        <description>It is used to store the name of the record type for CPN INDIA</description>
        <label>Third Party Record Type CPN INDIA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Record_Type_ID_CPN_INDIA__c</fullName>
        <label>Third Party Record Type ID CPN INDIA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Record_Type_ID__c</fullName>
        <label>Third Party Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Record_Type__c</fullName>
        <label>Third Party Record Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Override Settings</label>
</CustomObject>